# network-gpu-ai-sample

./: .gitignore  LICENSE  README.md
client/: benchmark.py  requirements.txt
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: main.rs
