[package]
name = "network-gpu-ai-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
encoding_rs = "0.8.35"
llama-cpp-2 = { version = "0.1.151", features = ["cuda"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
